# qbt_migrate

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  cli.py  pyproject.toml  qbt_migrate.py  requirements.txt  setup.py  tox.ini
.github/workflows/: codeql-analysis.yml  docker-pr.yml  docker.yml  pypi.yml  python.yml  release.yml
qbt_migrate/: __init__.py  classes.py  cli.py  enums.py  methods.py
tests/: test_classes.py  test_cli.py  test_methods.py
tests/test_files/: bad.fastresume  good.fastresume  good_no_qbt_save_path.fastresume  good_no_save_path.fastresume  good_not_relevant.fastresume
